// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BurgerMenu /> renders with expected snapshot on desktop 1`] = `
<div
  class="css-tt17dr e1n98f5i0"
  data-test="modal-container"
>
  <a
    class="css-zi8les e1n98f5i1"
    data-test="burger-menu-close"
    href="#"
  />
  <div
    class="css-1rvvun1 e1n98f5i2"
  >
    <div
      class="css-1nm3sht e1n98f5i3"
    >
      <ul
        class="css-k2pbs6 eozwspw0"
      >
        <a
          class="css-1q0ao8j eozwspw1"
          data-test="burger-logo"
          href=""
        >
          <img
            alt="Eurosport"
            class="css-nm00j4 e16claee0"
            src="eurosport.svg"
          />
        </a>
        <li
          class="css-fyc13c extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="/watch-eurosport-live-stream.shtml"
          >
            Watch Eurosport
          </a>
        </li>
        <li
          class="css-1ix6ank extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          class="css-1mehkit extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="#"
          >
            All sports
          </a>
        </li>
        <li
          class="css-1ix6ank extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="https://int-video.eurosport.co.uk"
          >
            Videos
          </a>
        </li>
        <li
          class="css-1ix6ank extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="//help.eurosport.com/hc/en-gb"
          >
            Help
          </a>
        </li>
        <li
          class="css-1ix6ank extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="#"
          >
            More
          </a>
        </li>
        <li
          class="css-zlbz99 extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="#"
          >
            Version EN
          </a>
        </li>
      </ul>
      <div
        class="css-11gsfft etiwi6e0"
      >
        <div
          class="css-3phua e1a98dx70"
          data-test="subnav-sports-mobile"
        >
          <div
            class="css-yc8xj9 e1a98dx72"
          >
            <span
              class="css-ta411o e1a98dx73"
            />
          </div>
          <div
            class="css-1fyfug8 e1a98dx74"
          />
          <ul
            class="css-ehk4yy e1a98dx71"
            data-test="mobile-menu-list"
          />
        </div>
        <div
          class="css-1jd1f80 etiwi6e1"
        >
          <div
            class="css-5xwnhj e1a98dx70"
          >
            <div
              class="css-1ff9muh e1a98dx74"
            >
              Popular sports
            </div>
            <ul
              class="css-ehk4yy e1a98dx71"
            >
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-football"
                  href="/football/"
                >
                  Football
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-olympics"
                  href="/olympics/"
                >
                  Olympics
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-winter-sports"
                  href="/winter-sports/"
                >
                  Winter Sports
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-tennis"
                  href="/tennis/"
                >
                  Tennis
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-snooker"
                  href="/snooker/"
                >
                  Snooker
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-motorsports"
                  href="/allmotorsports/"
                >
                  Motorsports
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-cycling"
                  href="/cycling/"
                >
                  Cycling
                </a>
              </li>
            </ul>
          </div>
          <div
            class="css-1s18wcu e1a98dx70"
          >
            <div
              class="css-1ff9muh e1a98dx74"
            >
              All sports
            </div>
            <ul
              class="css-1xwddlu e1a98dx71"
            >
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="desktop-athletics"
                  href="/athletics/"
                >
                  Athletics
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="desktop-basketball"
                  href="/basketball/"
                >
                  Basketball
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-boxing"
                  href="/boxing/"
                >
                  Boxing
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-bsb"
                  href="/british-superbikes/"
                >
                  BSB
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-cricket"
                  href="/cricket/"
                >
                  Cricket
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="desktop-cycling"
                  href="/cycling/"
                >
                  Cycling
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-darts"
                  href="/darts/"
                >
                  Darts
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-equestrian"
                  href="/equestrian/"
                >
                  Equestrian
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-f-1"
                  href="/formula-1/"
                >
                  F1
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-fencing"
                  href="/fencing/"
                >
                  Fencing
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="desktop-football"
                  href="/football/"
                >
                  Football
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-formula-e"
                  href="/formula-e/"
                >
                  Formula E
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="desktop-golf"
                  href="/golf/"
                >
                  Golf
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-horse-racing"
                  href="/horse-racing/"
                >
                  Horse Racing
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-judo"
                  href="/judo/"
                >
                  Judo
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="desktop-motorsports"
                  href="/allmotorsports/"
                >
                  Motorsports
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="desktop-olympics"
                  href="/olympics/"
                >
                  Olympics
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="desktop-snooker"
                  href="/snooker/"
                >
                  Snooker
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-squash"
                  href="/squash/"
                >
                  Squash
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="desktop-tennis"
                  href="/tennis/"
                >
                  Tennis
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="desktop-winter-sports"
                  href="/winter-sports/"
                >
                  Winter Sports
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-120vk9r er3pak40"
    >
      <div
        class="css-1qhspg1 e18h3h8f0"
      >
        <div
          class="css-1pwvd6w e18h3h8f1"
        >
          Follow us on :
        </div>
        <ul
          class="css-19726qa e18h3h8f2"
        >
          <li>
            <a
              class="css-1e0xen9 e18h3h8f3"
              href="//facebook.com/Eurosport-828777003809568"
              target="_self"
            >
              <span
                class="css-5fkscy ewxn71y0"
              />
              <span
                class="css-mbm9py e1oslrmw0"
              >
                Facebook
              </span>
            </a>
          </li>
          <li>
            <a
              class="css-1e0xen9 e18h3h8f3"
              href="//twitter.com/Eurosport_UK"
              target="_self"
            >
              <span
                class="css-1wskc65 ewxn71y3"
              />
              <span
                class="css-mbm9py e1oslrmw0"
              >
                Twitter
              </span>
            </a>
          </li>
          <li>
            <a
              class="css-1e0xen9 e18h3h8f3"
              href="//www.snapchat.com/add/eurosport"
              target="_self"
            >
              <span
                class="css-mgiwac ewxn71y1"
              />
              <span
                class="css-mbm9py e1oslrmw0"
              >
                Snapchat
              </span>
            </a>
          </li>
          <li>
            <a
              class="css-1e0xen9 e18h3h8f3"
              href="//www.instagram.com/eurosport"
              target="_self"
            >
              <span
                class="css-1b4f1e ewxn71y2"
              />
              <span
                class="css-mbm9py e1oslrmw0"
              >
                Instagram
              </span>
            </a>
          </li>
        </ul>
      </div>
      <ul
        class="css-1cuyefm er3pak41"
      >
        <li
          class="css-7avswz er3pak42"
        >
          <a
            href="https://int.eurosport.co.uk/eurosport/legal-notice_sto4289230/story.shtml"
            target="__blank"
          >
            Terms and Conditions
          </a>
        </li>
        <li
          class="css-7avswz er3pak42"
        >
          <a
            href="https://int.eurosport.co.uk/eurosport/eurosport-privacy-policy_sto4264003/story.shtml"
            target="__blank"
          >
            Privacy Policy
          </a>
        </li>
        <li
          class="css-7avswz er3pak42"
        >
          <a
            href="https://int.eurosport.co.uk/eurosport/cookie-policy_sto6832423/story.shtml"
            target="__blank"
          >
            Cookie Policy
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<BurgerMenu /> renders with expected snapshot on mobile 1 1`] = `
<div
  class="css-tt17dr e1n98f5i0"
  data-test="modal-container"
>
  <a
    class="css-zi8les e1n98f5i1"
    data-test="burger-menu-close"
    href="#"
  />
  <div
    class="css-1rvvun1 e1n98f5i2"
  >
    <div
      class="css-1nm3sht e1n98f5i3"
    >
      <ul
        class="css-k2pbs6 eozwspw0"
      >
        <a
          class="css-1q0ao8j eozwspw1"
          data-test="burger-logo"
          href=""
        >
          <img
            alt="Eurosport"
            class="css-nm00j4 e16claee0"
            src="eurosport.small.svg"
          />
        </a>
        <li
          class="css-fyc13c extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="/watch-eurosport-live-stream.shtml"
          >
            Watch
          </a>
        </li>
        <li
          class="css-1ix6ank extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          class="css-1mehkit extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="#"
          >
            All sports
          </a>
        </li>
        <li
          class="css-1ix6ank extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="https://int-video.eurosport.co.uk"
          >
            Videos
          </a>
        </li>
        <li
          class="css-1ix6ank extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="//help.eurosport.com/hc/en-gb"
          >
            Help
          </a>
        </li>
        <li
          class="css-1ix6ank extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="#"
          >
            More
          </a>
        </li>
        <li
          class="css-zlbz99 extpsv11"
        >
          <a
            class="css-rf8u0q extpsv10"
            href="#"
          >
            Version EN
          </a>
        </li>
      </ul>
      <div
        class="css-11gsfft etiwi6e0"
      >
        <div
          class="css-3phua e1a98dx70"
          data-test="subnav-sports-mobile"
        >
          <div
            class="css-yc8xj9 e1a98dx72"
          >
            <span
              class="css-ta411o e1a98dx73"
            />
          </div>
          <div
            class="css-1fyfug8 e1a98dx74"
          />
          <ul
            class="css-ehk4yy e1a98dx71"
            data-test="mobile-menu-list"
          />
        </div>
        <div
          class="css-1jd1f80 etiwi6e1"
        >
          <div
            class="css-5xwnhj e1a98dx70"
          >
            <div
              class="css-1ff9muh e1a98dx74"
            >
              Popular sports
            </div>
            <ul
              class="css-ehk4yy e1a98dx71"
            >
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-football"
                  href="/football/"
                >
                  Football
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-olympics"
                  href="/olympics/"
                >
                  Olympics
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-winter-sports"
                  href="/winter-sports/"
                >
                  Winter Sports
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-tennis"
                  href="/tennis/"
                >
                  Tennis
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-snooker"
                  href="/snooker/"
                >
                  Snooker
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-motorsports"
                  href="/allmotorsports/"
                >
                  Motorsports
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-3jxfkk e4xjvgt1"
                  data-test="desktop-cycling"
                  href="/cycling/"
                >
                  Cycling
                </a>
              </li>
            </ul>
          </div>
          <div
            class="css-1s18wcu e1a98dx70"
          >
            <div
              class="css-1ff9muh e1a98dx74"
            >
              All sports
            </div>
            <ul
              class="css-1xwddlu e1a98dx71"
            >
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="mobile-football"
                  href="/football/"
                >
                  Football
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="mobile-olympics"
                  href="/olympics/"
                >
                  Olympics
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="mobile-winter-sports"
                  href="/winter-sports/"
                >
                  Winter Sports
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="mobile-tennis"
                  href="/tennis/"
                >
                  Tennis
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="mobile-snooker"
                  href="/snooker/"
                >
                  Snooker
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="mobile-motorsports"
                  href="/allmotorsports/"
                >
                  Motorsports
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="mobile-cycling"
                  href="/cycling/"
                >
                  Cycling
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-darts"
                  href="/darts/"
                >
                  Darts
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="mobile-athletics"
                  href="/athletics/"
                >
                  Athletics
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-f-1"
                  href="/formula-1/"
                >
                  F1
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-formula-e"
                  href="/formula-e/"
                >
                  Formula E
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-horse-racing"
                  href="/horse-racing/"
                >
                  Horse Racing
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-judo"
                  href="/judo/"
                >
                  Judo
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-equestrian"
                  href="/equestrian/"
                >
                  Equestrian
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-squash"
                  href="/squash/"
                >
                  Squash
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-cricket"
                  href="/cricket/"
                >
                  Cricket
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-bsb"
                  href="/british-superbikes/"
                >
                  BSB
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="mobile-golf"
                  href="/golf/"
                >
                  Golf
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1feyfxh e4xjvgt1"
                  data-test="mobile-basketball"
                  href="/basketball/"
                >
                  Basketball
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-fencing"
                  href="/fencing/"
                >
                  Fencing
                </a>
              </li>
              <li
                class="css-oso455 e4xjvgt0"
              >
                <a
                  class="css-1w183op e4xjvgt1"
                  data-test="desktop-boxing"
                  href="/boxing/"
                >
                  Boxing
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-120vk9r er3pak40"
    >
      <div
        class="css-1qhspg1 e18h3h8f0"
      >
        <div
          class="css-1pwvd6w e18h3h8f1"
        >
          Follow us on :
        </div>
        <ul
          class="css-19726qa e18h3h8f2"
        >
          <li>
            <a
              class="css-1e0xen9 e18h3h8f3"
              href="//facebook.com/Eurosport-828777003809568"
              target="_self"
            >
              <span
                class="css-5fkscy ewxn71y0"
              />
            </a>
          </li>
          <li>
            <a
              class="css-1e0xen9 e18h3h8f3"
              href="//twitter.com/Eurosport_UK"
              target="_self"
            >
              <span
                class="css-1wskc65 ewxn71y3"
              />
            </a>
          </li>
          <li>
            <a
              class="css-1e0xen9 e18h3h8f3"
              href="//www.snapchat.com/add/eurosport"
              target="_self"
            >
              <span
                class="css-mgiwac ewxn71y1"
              />
            </a>
          </li>
          <li>
            <a
              class="css-1e0xen9 e18h3h8f3"
              href="//www.instagram.com/eurosport"
              target="_self"
            >
              <span
                class="css-1b4f1e ewxn71y2"
              />
            </a>
          </li>
        </ul>
      </div>
      <ul
        class="css-1cuyefm er3pak41"
      >
        <li
          class="css-7avswz er3pak42"
        >
          <a
            href="https://int.eurosport.co.uk/eurosport/legal-notice_sto4289230/story.shtml"
            target="__blank"
          >
            Terms and Conditions
          </a>
        </li>
        <li
          class="css-7avswz er3pak42"
        >
          <a
            href="https://int.eurosport.co.uk/eurosport/eurosport-privacy-policy_sto4264003/story.shtml"
            target="__blank"
          >
            Privacy Policy
          </a>
        </li>
        <li
          class="css-7avswz er3pak42"
        >
          <a
            href="https://int.eurosport.co.uk/eurosport/cookie-policy_sto6832423/story.shtml"
            target="__blank"
          >
            Cookie Policy
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
